--- a/TylerQuickMedia/UI/Media/Media.storyboard
+++ b/TylerQuickMedia/UI/Media/Media.storyboard
@@ -16,12 +16,32 @@
                     <view key="view" contentMode="scaleToFill" id="eK1-He-MmH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2NB-o8-Usq">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WTY-vb-2bR">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="2NB-o8-Usq" firstAttribute="top" secondItem="qPg-gk-Z22" secondAttribute="top" id="EYL-b1-EdL"/>
+                            <constraint firstItem="2NB-o8-Usq" firstAttribute="centerY" secondItem="qPg-gk-Z22" secondAttribute="centerY" id="Hwk-gG-lU8"/>
+                            <constraint firstItem="2NB-o8-Usq" firstAttribute="leading" secondItem="qPg-gk-Z22" secondAttribute="leading" id="MJi-c1-wRu"/>
+                            <constraint firstItem="2NB-o8-Usq" firstAttribute="centerX" secondItem="qPg-gk-Z22" secondAttribute="centerX" id="kEN-ci-gzI"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qPg-gk-Z22"/>
                     </view>
                     <navigationItem key="navigationItem" id="5BB-IT-VVq"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="vBZ-9i-LtJ" id="bzA-xV-eZR"/>
+                        <outlet property="uiCollectionView" destination="2NB-o8-Usq" id="cVb-Yc-RWy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nhe-Aw-QH3" userLabel="First Responder" sceneMemberID="firstResponder"/>
